--- a/question/type/kprime/mobile/kprime_latest.html
+++ b/question/type/kprime/mobile/kprime_latest.html
@@ -1,12 +1,14 @@
-<section *ngIf="question.text || question.text === ''" class="qtype-kprime">
-    <ion-item class="ion-text-wrap">
+<section class="list qtype-kprime-container qtype-kprime"  *ngIf="question.text || question.text === ''" class="qtype-kprime">
+    <ion-item class="addon-qtype-kprime-container qtext ion-text-wrap ">
         <ion-label>
             <p>
-                <core-format-text [component]="component" [componentId]="componentId" [text]="question.text">
+                <core-format-text [component]="component" [componentId]="componentId" [text]="question.text"
+                [contextLevel]="contextLevel" [contextInstanceId]="contextInstanceId" [courseId]="courseId">
                 </core-format-text>
             </p>
             <p *ngIf="question.prompt">
-                <core-format-text [component]="component" [componentId]="componentId" [text]="question.prompt">
+                <core-format-text [component]="component" [componentId]="componentId" [text]="question.prompt"
+                [contextLevel]="contextLevel" [contextInstanceId]="contextInstanceId" [courseId]="courseId">
                 </core-format-text>
             </p>
         </ion-label>
@@ -27,11 +29,13 @@
             <ion-radio-group [name]="option.name" [(ngModel)]="option.selection" class="{{option.qclass}}">
                 <ion-row>
                     <ion-col>
-                        <ion-label>
-                            <core-format-text [component]="component" [componentId]="componentId" [text]="option.text">
+                        <ion-label class="addon-qtype-kprime-container qtext ion-text-wrap ">
+                            <core-format-text   [component]="component" [componentId]="componentId" [text]="option.text"
+                            [contextLevel]="contextLevel" [contextInstanceId]="contextInstanceId" [courseId]="courseId">
                             </core-format-text>
                             <div *ngIf="option.feedback" class="kprimespecificfeedback">
-                                <core-format-text [text]="option.feedback"></core-format-text>
+                                <core-format-text  [component]="component" [componentId]="componentId"
+                                [contextLevel]="contextLevel" [contextInstanceId]="contextInstanceId" [courseId]="courseId" [text]="option.feedback"></core-format-text>
                             </div>
                         </ion-label>
                     </ion-col>
